[gd_scene load_steps=9 format=3 uid="uid://by1n111h3rt72"]

[ext_resource type="Script" path="res://Levels/Transitions/lvl_1_2_transition.gd" id="1_am34o"]
[ext_resource type="FontFile" uid="uid://dmco0k4qpb35i" path="res://Assets/m3x6.ttf" id="2_5yru8"]
[ext_resource type="Script" path="res://MenuScenes/Camera3D.gd" id="3_qygre"]
[ext_resource type="PackedScene" uid="uid://dq0cljd6hr2xh" path="res://UI ELEMENTS/lighting.tscn" id="4_4jccl"]
[ext_resource type="Texture2D" uid="uid://de744t45ky7db" path="res://Player/Assets/Water_preview.jpgC878A51E-2B84-45CA-85CB-75E5BC88EEC8Large.jpg" id="5_3xuav"]

[sub_resource type="BoxMesh" id="BoxMesh_xw8cy"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_puugx"]
albedo_color = Color(0, 0.521569, 0.694118, 0.870588)
roughness = 0.03
normal_enabled = true
normal_scale = -0.25
normal_texture = ExtResource("5_3xuav")

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_pxjf6"]
points = PackedVector3Array(-0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5)

[node name="Lvl1-2Transition" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_am34o")

[node name="BG" type="Node3D" parent="."]

[node name="SubViewportContainer" type="SubViewportContainer" parent="BG"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="BG/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="BG/SubViewportContainer/SubViewport"]
transform = Transform3D(0.17272, 0, 0.984971, -0.920097, -0.356917, 0.161344, 0.351553, -0.934136, -0.0616467, 18.0533, 29.0118, 31.4208)
script = ExtResource("3_qygre")

[node name="Lighting" parent="BG" instance=ExtResource("4_4jccl")]

[node name="Ocean" type="MeshInstance3D" parent="BG"]
transform = Transform3D(99999, 0, 0, 0, 5, 0, 0, 0, 9999, 0, -4.89241, 0)
mesh = SubResource("BoxMesh_xw8cy")
surface_material_override/0 = SubResource("StandardMaterial3D_puugx")

[node name="Area3D" type="Area3D" parent="BG/Ocean"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="BG/Ocean/Area3D"]
shape = SubResource("ConvexPolygonShape3D_pxjf6")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Your Time Was" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -141.0
offset_right = 141.0
offset_bottom = 60.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_5yru8")
theme_override_font_sizes/font_size = 71
text = "Your Time was: "
horizontal_alignment = 1

[node name="Retry" type="Button" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -109.0
offset_top = -32.0
offset_right = 109.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_5yru8")
theme_override_font_sizes/font_size = 56
text = "RETRY"

[node name="Next Level" type="Button" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -109.0
offset_top = -106.0
offset_right = 109.0
offset_bottom = -42.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_5yru8")
theme_override_font_sizes/font_size = 56
text = "NEXT LEVEL
"

[node name="Your Best Time was" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -188.0
offset_top = 52.0
offset_right = 188.0
offset_bottom = 112.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_5yru8")
theme_override_font_sizes/font_size = 71
text = "Your Best Time was: "
horizontal_alignment = 1

[node name="MAIN MENU" type="Button" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -109.0
offset_top = 42.0
offset_right = 109.0
offset_bottom = 106.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_5yru8")
theme_override_font_sizes/font_size = 56
text = "MAIN MENU"

[connection signal="pressed" from="CanvasLayer/Retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="CanvasLayer/Next Level" to="." method="_on_next_level_pressed"]
[connection signal="pressed" from="CanvasLayer/MAIN MENU" to="." method="_on_main_menu_pressed"]
